service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cherry-ohlcv
spec:
  selector:
    app: cherry-ohlcv
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
